
	[BZ #395]
	* iconvdata/jis0208.c: Remove 0x005C mapping from
	__jisx0208_from_ucs4_lat1.
	Reported by Fumitoshi UKAI <ukai@debian.or.jp>

2005-09-23  Ulrich Drepper  <drepper@redhat.com>

	[BZ #394]
	* libio/fmemopen.c (fmemopen_write): Return 0 instead of -1 if
	nothing can be written.
	* libio/iofopncook.c (_IO_cookie_write): If something went wrong,
	set error bit.

2005-09-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #281]
	* posix/regex.h: Define RE_TRANSLATE_TYPE as unsigned char *.
	* posix/regcomp.c: Remove unnecessary uses of
	unsigned RE_TRANSLATE_TYPE.
	* posix/regex_internal.h: Likewise.
	* posix/regex_internal.c: Likewise.
	* posix/regexexec.c: Likewise.
	Based on a patch by Stepan Kasal <kasal@ucw.cz>.

	[BZ #1035]
	* locale/iso-4217.def: Replace TRL entry with TRY for new Turkish Lira.

	[BZ #1363]
	* nscd/nscd_getpw_r.c (nscd_getpw_r): Remove incorrectly C&Ped
	free call in code handling detection of GC runs.

2005-09-22  Roland McGrath  <roland@redhat.com>

	* elf/dl-tsd.c (__libc_dl_error_tsd): Use attribute_tls_model_ie for
	static __thread variable.
	From Alexandre Oliva <aoliva@redhat.com>

	* Makefile ($(objpfx)c++-types-check.out): Use $<, not $^, in command.
	Reported by Alexandre Oliva <aoliva@redhat.com>.

2005-09-20  Jakub Jelinek  <jakub@redhat.com>

	* nscd/dbg_log.c (init_logfile): Use fopen64 rather than fopen.

2005-09-20  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/lddlibc4.c (main): Use execv, not execl.

	[BZ #1346]
	* elf/dl-load.c (_dl_map_object_from_fd) [HAVE_Z_RELRO]: Do relro
	magic on __stack_prot only if [SHARED].  Skip mprotect if __stack_prot
	lies outside the page-rounded-down relro region.

2005-09-19  Richard Henderson  <rth@redhat.com>

	[BZ #1358]
	* sysdeps/unix/alpha/sysdep.h (inline_syscall1): Copy argument(s)
	to a temporary first.
	(inline_syscall2, inline_syscall3, inline_syscall4): Likewise.
	(inline_syscall5, inline_syscall6): Likewise.

	* sysdeps/alpha/ldiv.S (lldiv): Add alias.
